--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
-numpy==1.19.2
-pandas==1.1.2
-matplotlib==3.3.1
-seaborn==0.11.0
-plotly==4.12.0
-
-streamlit==0.85.0
-
-scikit-learn==0.24.2
-tensorflow-cpu==2.6.0
-keras==2.6.0
-protobuf==3.20
-altair<5
+ipywidgets==8.1.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyterlab-widgets==3.0.9
+qtconsole==5.5.1
+QtPy==2.4.1
+widgetsnbextension==4.0.9
