--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ arrow==1.3.0
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==23.2.0
+Augmentor==0.2.12
 Babel==2.14.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
@@ -76,6 +77,7 @@ parso==0.8.3
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.1.0
+plotly==5.18.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 protobuf==4.25.2
@@ -100,6 +102,8 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.0
 rpds-py==0.17.1
+scikit-learn==1.4.0
+scipy==1.12.0
 seaborn==0.13.1
 Send2Trash==1.8.2
 setuptools==69.0.3
@@ -111,6 +115,7 @@ stack-data==0.6.3
 streamlit==1.30.0
 tenacity==8.2.3
 terminado==0.18.0
+threadpoolctl==3.2.0
 tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.1
