--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cachetools==5.3.2
 click==8.1.7
 contourpy==1.1.1
 cycler==0.12.1
+fastjsonschema==2.19.1
 flatbuffers==23.5.26
 fonttools==4.47.2
 gast==0.4.0
@@ -35,6 +36,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.4
 matplotlib==3.7.4
 mdurl==0.1.2
+nbformat==5.9.2
 networkx==3.1
 numpy==1.24.4
 oauthlib==3.2.2
@@ -59,6 +61,7 @@ rich==13.7.0
 rpds-py==0.17.1
 rsa==4.9
 scikit-image==0.21.0
+scikit-learn==1.3.2
 scipy==1.10.1
 seaborn==0.13.2
 smmap==5.0.1
@@ -70,6 +73,7 @@ tensorflow==2.13.1
 tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.34.0
 termcolor==2.4.0
+threadpoolctl==3.2.0
 tifffile==2023.7.10
 toml==0.10.2
 toolz==0.12.1
