--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ matplotlib==3.7.4
 mdurl==0.1.2
 nbformat==5.9.2
 networkx==3.1
-numpy>=1.24.4
+numpy<=1.24.4
 oauthlib==3.2.2
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
