--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
 absl-py==2.1.0
+altair==5.2.0
+astunparse==1.6.3
 attrs==23.2.0
+backports.zoneinfo==0.2.1
+blinker==1.7.0
 cachetools==5.3.2
 click==8.1.7
+contourpy==1.1.1
+cycler==0.12.1
 fastjsonschema==2.19.1
+flatbuffers==23.5.26
 fonttools==4.47.2
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.41
 google-auth==2.27.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
@@ -11,20 +21,31 @@ grpcio==1.60.0
 h5py==3.10.0
 imageio==2.33.1
 importlib-resources==6.1.1
+install==1.3.5
 Jinja2==3.1.3
 joblib==1.3.2
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
+kaleido==0.2.1
 keras==2.13.1
+kiwisolver==1.4.5
+lazy_loader==0.3
+libclang==16.0.6
 Markdown==3.5.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.4
 matplotlib==3.7.4
+mdurl==0.1.2
 nbformat==5.9.2
-numpy<=1.24.4
+networkx==3.1
+numpy==1.24.3
+oauthlib==3.2.2
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
 opt-einsum==3.3.0
 pandas==2.0.3
 pillow==10.2.0
+pip-autoremove==0.10.0
 pkgutil_resolve_name==1.3.10
 plotly==5.18.0
 protobuf==4.25.2
@@ -38,12 +59,15 @@ PyWavelets==1.4.1
 referencing==0.33.0
 requests-oauthlib==1.3.1
 rich==13.7.0
+rpds-py==0.17.1
 rsa==4.9
 scikit-image==0.21.0
 scikit-learn==1.3.2
 scipy==1.10.1
 seaborn==0.13.2
+smmap==5.0.1
 streamlit==1.30.0
+tenacity==8.2.3
 tensorboard==2.13.0
 tensorboard-data-server==0.7.2
 tensorflow==2.13.1
@@ -57,6 +81,8 @@ toolz==0.12.1
 typing_extensions==4.5.0
 tzdata==2023.4
 tzlocal==5.2
+validators==0.22.0
 watchdog==3.0.0
 Werkzeug==3.0.1
 wrapt==1.16.0
+yellowbrick==1.5
