--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ streamlit==1.30.0
 tenacity==8.2.3
 tensorboard==2.13.0
 tensorboard-data-server==0.7.2
-tensorflow==2.13.1
+tensorflow-cpu==2.13.1
 tensorflow-estimator==2.13.0
 tensorflow-io-gcs-filesystem==0.34.0
 termcolor==2.4.0
