--- a/.slugignore
+++ b/.slugignore
@@ -1,6 +1,6 @@
 inputs/cherry_leaves_dataset/cherry-leaves/test
 inputs/cherry_leaves_dataset/cherry-leaves/train
-inputs/cherry_leaves_dataset/cherry-leaves/validation
 jupyter_notebooks
 README.md
 static/images
+.venv
